# NanORange

./: .gitignore  LICENSE  README.md  plans.md  pyproject.toml  requirements.txt
examples/pipelines/: boundary_colorizer.py  image_enhancer.py  shape_fitter.py
examples/plots/: plot_size_distribution.py  shape_visualizer.py
src/nanorange/: agent.py  prompts.py  settings.py
src/nanorange/agent_tools/: __init__.py  cryo_tem_analysis.py  parameter_optimizer.py
src/nanorange/image_analyzer/analyzer_agent/: base_agent.py
src/nanorange/image_analyzer/analyzer_agent/boundary_colorizer/: agent.py  prompts.py
src/nanorange/image_analyzer/analyzer_agent/contrast_enhancer/: agent.py  prompts.py
src/nanorange/image_analyzer/analyzer_agent/parameter_optimizer/: __init__.py  agent.py  prompts.py
src/nanorange/image_analyzer/geometry_fitter/: __init__.py  contour_finder.py  shape_fitter.py
src/nanorange/image_analyzer/geometry_fitter/fit_shapes/: __init__.py  base_shape.py  fit_circle.py  fit_ellipse.py
src/nanorange/image_analyzer/plotter/shape_plotter/: __init__.py  base_drawer.py  circle_drawer.py  ellipse_drawer.py  shape_plotter.py
src/nanorange/image_analyzer/plotter/stats_plotter/: __init__.py  size_distribution.py
src/nanorange/image_analyzer/tools/: image_splitter.py  image_stitcher.py  image_thresholder.py
src/nanorange/pipelines/: __init__.py  cryo_tem_pipeline.py
src/nanorange/schemas/: __init__.py  schemas.py
